--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-paginate": "^8.2.0",
+    "react-phone-input-2": "^2.15.1",
+    "react-phone-number-input": "^3.3.0",
     "react-range-slider-input": "^3.0.7",
     "react-router-dom": "^6.14.1",
     "react-select": "^5.7.3",
