--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-range-slider-input": "^3.0.7",
     "react-router-dom": "^6.14.1",
     "react-select": "^5.7.3",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "sweetalert2": "^11.7.18"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
