--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "moment": "^2.29.4",
+    "otp-input-react": "^0.3.0",
     "react": "^18.2.0",
     "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
@@ -23,6 +24,7 @@
     "react-range-slider-input": "^3.0.7",
     "react-router-dom": "^6.14.1",
     "react-select": "^5.7.3",
+    "react-toastify": "^9.1.3",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.7.18"
   },
