--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
+    "react-google-autocomplete": "^2.7.3",
     "react-icons": "^4.10.1",
     "react-paginate": "^8.2.0",
     "react-phone-input-2": "^2.15.1",
