--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-range-slider-input": "^3.0.7",
     "react-router-dom": "^6.14.1",
     "react-select": "^5.7.4",
+    "react-share": "^4.4.1",
     "react-toastify": "^9.1.3",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.7.18",
