--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "moment": "^2.29.4",
     "otp-input-react": "^0.3.0",
     "react": "^18.2.0",
+    "react-calendar": "^4.6.0",
     "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
     "react-google-autocomplete": "^2.7.3",
