--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-google-autocomplete": "^2.7.3",
     "react-google-places-autocomplete": "^4.0.1",
     "react-icons": "^4.10.1",
+    "react-image-magnify": "^2.7.4",
     "react-multi-date-picker": "^4.1.2",
     "react-paginate": "^8.2.0",
     "react-phone-input-2": "^2.15.1",
