--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@paypal/react-paypal-js": "^8.1.3",
     "@react-google-maps/api": "^2.19.2",
+    "@stripe/react-stripe-js": "^2.1.2",
+    "@stripe/stripe-js": "^2.1.1",
     "axios": "^1.4.0",
     "firebase": "^10.1.0",
     "localforage": "^1.10.0",
@@ -24,7 +27,6 @@
     "react-google-autocomplete": "^2.7.3",
     "react-google-places-autocomplete": "^4.0.1",
     "react-icons": "^4.10.1",
-    "react-image-magnify": "^2.7.4",
     "react-multi-date-picker": "^4.1.2",
     "react-paginate": "^8.2.0",
     "react-phone-input-2": "^2.15.1",
